'publish_movement' is now 'main_command' improvements to 'main_command' lopping through 4 positions now possible

--- a/iiwa_tesla/iiwa_tesla_publish/CMakeLists.txt
+++ b/iiwa_tesla/iiwa_tesla_publish/CMakeLists.txt
@@ -163,6 +163,8 @@ catkin_install_python(PROGRAMS
   scripts/test_publisher
   scripts/test_listener
   scripts/publish_movement
+  scripts/main_command
+  scripts/goal
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
