implementing moveit with real robot

--- a/iiwa_tesla/iiwa_tesla_moveit/config/EffortJointInterface_controllers.yaml
+++ b/iiwa_tesla/iiwa_tesla_moveit/config/EffortJointInterface_controllers.yaml
@@ -2,7 +2,7 @@ controller_list:
   - name: EffortJointInterface_trajectory_controller
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
-    default: true
+    default: True
     joints: 
       - iiwa_joint_1
       - iiwa_joint_2
