--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ Status API Training Shop Blog About
 
 iiwa_tesla/iiwa_tesla_publish/src/1487454-03-B_neu.stp
 iiwa_tesla/iiwa_tesla_publish/src/tesla_part_solo-1487454-03-B_neu.stl
+iiwa_tesla/iiwa_tesla_publish/src/tesla_part_solo-1487454-03-B_neu (Meshed)002.stl
