completed trajectory loop, adjusted robot position

--- a/iiwa_moveit/config/joint_limits.yaml
+++ b/iiwa_moveit/config/joint_limits.yaml
@@ -37,3 +37,6 @@ joint_limits:
     max_velocity: 10
     has_acceleration_limits: false
     max_acceleration: 0
+
+default_velocity_scaling_factor: 1.0
+default_acceleration_scaling_factor: 1.0
