start implementing box constraint

--- a/iiwa_tesla/iiwa_tesla_publish/CMakeLists.txt
+++ b/iiwa_tesla/iiwa_tesla_publish/CMakeLists.txt
@@ -168,11 +168,8 @@ catkin_install_python(PROGRAMS
   scripts/signal
   scripts/hr_goal
   scripts/move_route
-<<<<<<< HEAD
   scripts/gather_frames
-  scripts/route_lib.py
-=======
->>>>>>> parent of 43bfddf... start implementing routes as external module
+  scripts/add_objects_to_scene
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
