--- a/iiwa_eef_light_static/config/kinematics.yaml
+++ b/iiwa_eef_light_static/config/kinematics.yaml
@@ -1,4 +1,10 @@
 eef_light_static:
-  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  #kinematics_solver: iiwa14_eef_light_static/IKFastKinematicsPlugin
+  #kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  kinematics_solver: trac_ik_kinematics_plugin/TRAC_IKKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
+  #solve_type: Speed
+  #solve_type: Distance
+  #solve_type: Manipulation1
+  solve_type: Manipulation2
