--- a/iiwa_eef_light_static/config/ompl_planning.yaml
+++ b/iiwa_eef_light_static/config/ompl_planning.yaml
@@ -128,6 +128,7 @@ planner_configs:
     dense_delta_fraction: 0.001  # delta fraction for interface detection. default: 0.001
     max_failures: 5000  # maximum consecutive failure limit. default: 5000
 eef_light_static:
+  default_planner_config: RRTConnect
   planner_configs:
     - AnytimePathShortening
     - SBL
@@ -154,4 +155,5 @@ eef_light_static:
     - SPARS
     - SPARStwo
   projection_evaluator: joints(iiwa_joint_1,iiwa_joint_2)
-  longest_valid_segment_fraction: 0.001
+  longest_valid_segment_fraction: 0.005
+  enforce_constrained_state_space: true
