--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,6 @@ Status API Training Shop Blog About
 iiwa_tesla/iiwa_tesla_publish/src/1487454-03-B_neu.stp
 iiwa_tesla/iiwa_tesla_publish/src/tesla_part_solo-1487454-03-B_neu.stl
 iiwa_tesla/iiwa_tesla_publish/src/tesla_part_solo-1487454-03-B_neu (Meshed)002.stl
+
+iiwa_tesla/iiwa_tesla_data/*
+!iiwa_tesla/iiwa_tesla_data/joint_pos_vel_data.ipynb
